# exauto

./: .gitignore  Automata  AutomataBase.cpp  AutomataBase.hpp  CMakeLists.txt  DFA.cpp  DFA.hpp  README.md  exauto.cpp  makefile  test.sh
apps/: visualize.py
include/: Automata  AutomataBase.hpp  DFA.hpp
lib/: AutomataBase.cpp  DFA.cpp
src/: AutomataBase.cpp  DFA.cpp
tests/: test01.cpp  test02.cpp  test03.cpp
